fix popular section: - add <a> wrapping image and course-name - add cursor for button - change hover effect on course-item

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,7 +360,7 @@ a {
 }
 
 .course-list__item:hover {
-  border: none;
+  border-color: transparent;
   box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
 }
 
@@ -410,6 +410,7 @@ a {
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .list-item-btn:hover,
